# Waffle-AIron

./: .codexrules  .cursorrules  .gitignore  .mcp.json  GEMINI.md  LICENSE  README.md  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
playground/gatekeeper-saas/: CLAUDE.md  Cargo.toml  GEMINI.md
playground/gatekeeper-saas-agy-v1/: Cargo.toml  STATE.md
playground/gatekeeper-saas-agy-v1/.wai/: phased_design.md  project.yaml
playground/gatekeeper-saas-agy-v1/.wai/context/: domains.md  project.md  wairon-guide.md
playground/gatekeeper-saas-agy-v1/.wai/docs/: topology.md
playground/gatekeeper-saas-agy-v1/.wai/specs/: system.yaml
playground/gatekeeper-saas-agy-v1/src/: lib.rs  models.rs
playground/gatekeeper-saas-agy-v1/src/billing/: billing_orchestrator.rs  customer_registry.rs  customer_repository.rs  customer_store.rs  database_adapter.rs  mod.rs  stripe_adapter.rs  stripe_webhook_portal.rs  subscription_repository.rs  subscription_store.rs
playground/gatekeeper-saas-agy-v1/src/gatekeeper/: billing_client_adapter.rs  meter_repository.rs  meter_store.rs  mod.rs  notification_client_adapter.rs  orchestrator.rs  portal.rs  redis_adapter.rs
playground/gatekeeper-saas-agy-v1/src/notification/: email_adapter.rs  mod.rs  orchestrator.rs  push_adapter.rs
playground/gatekeeper-saas-agy-v1/tests/: composition.rs
playground/gatekeeper-saas-claude-v1/: .mcp.json  CLAUDE.md  Cargo.toml  GEMINI.md  docker-compose.yml
playground/gatekeeper-saas-claude-v1/.wai/: phased_design.md  project.yaml
playground/gatekeeper-saas-claude-v1/.wai/context/: domains.md  project.md  wairon-guide.md
playground/gatekeeper-saas-claude-v1/.wai/docs/: topology.md
playground/gatekeeper-saas-claude-v1/.wai/rules/: topology.yaml
playground/gatekeeper-saas-claude-v1/.wai/specs/: .index.yaml  system.yaml
playground/gatekeeper-saas-claude-v1/migrations/: 0001_accounts.sql  0002_subscriptions.sql  0003_metering.sql  0004_gatekeeping.sql  0005_notifications.sql
playground/gatekeeper-saas-claude-v1/src/: lib.rs  main.rs  web.rs
playground/gatekeeper-saas-claude-v1/src/accounts/: account_db_adapter.rs  account_directory.rs  account_index.rs  account_orchestrator.rs  account_registry.rs  account_repository.rs  account_store.rs  mod.rs  model.rs  (+2 more)
playground/gatekeeper-saas-claude-v1/tests/: composition.rs  integration_pg.rs
playground/gatekeeper-saas/.wai/: phased_design.md  project.yaml
playground/gatekeeper-saas/src/: main.rs  models.rs
(+822 files in other folders)
