[package]
name = "gatekeeper-saas"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant control-plane gate: authorizes and meters API calls, enforces Stripe-backed subscription limits, and notifies billing contacts on usage thresholds."

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
async-trait = "0.1"
arc-swap = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
deadpool-redis = "0.18"
redis = "0.27"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
