[package]
name = "gatekeeper-saas"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.25.4", features = ["tokio-comp", "aio"] }
deadpool-redis = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
sha2 = "0.10.8"
lettre = { version = "0.11.7", default-features = false, features = ["tokio1-rustls", "ring", "webpki-roots", "hostname", "smtp-transport", "builder"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5.3", features = ["util"] }

